# PeakMode

./: README.md  gitignore
config/: peakmode.json
core/: CMakeLists.txt  main_test.cpp
core/engine/: Orchestrator.cpp  Orchestrator.h  ProfileManager.cpp  ProfileManager.h  Snapshot.cpp  Snapshot.h
core/modules/: InterruptTweaks.cpp  InterruptTweaks.h  NvidiaTweaks.cpp  NvidiaTweaks.h  WindowsTweaks.cpp  WindowsTweaks.h
ui/PeakModeTray/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  PeakModeCore.cs  PeakModeTray.csproj  TrayApp.cs  app.manifest
